--- a/login.html
+++ b/login.html
@@ -45,7 +45,7 @@
 		                <div class="alert alert-danger">$(error)</div>
 		            $(endif)
 
-		            <p class="mb-0">Please log on to use the hotspot service.</p>
+		            <p class="mb-0">Please log on to use the WiFiHotSpot Service.</p>
 
 		            $(if trial == 'yes')
 		                <p class="mb-0">
@@ -75,7 +75,7 @@
                 </div>
                 <div class="form-group row mb-0 text-center">
                 	<div class="col-md-12">
-                		<p class="text-muted mb-0">&copy 2019 Powered by CloudSpot</p>
+                		<p class="text-muted mb-0">&copy 2021 Powered by CloudSpot</p>
                 	</div>
                 </div>
             </form>
