--- a/alogin.html
+++ b/alogin.html
@@ -29,9 +29,9 @@
             </a>
             <div class="row">
             	<div class="col-md-12 text-center">
-		            <p class="mb-0">You are logged in.</p>
+		            <p class="mb-0">Successfully Connected.</p>
 	                <p>
-	                    If nothing happens, click <a href="$(link-redirect)">here</a>.
+	                    If you are loaded to the main page, click <a href="$(link-redirect)">here</a>.
 	                </p>
 		        </div>
             </div>
