--- a/alogin.html
+++ b/alogin.html
@@ -10,9 +10,9 @@
 <link rel="stylesheet" type="text/css" media="all" href="packages/bootstrap/bootstrap.css">
 <link rel="stylesheet" type="text/css" media="all" href="css/theme.css">
 <script language="JavaScript">
-<!--
+//<!--
     function startClock() {
-        $(if popup == 'true')
+       // $(if popup == 'true')
         open('$(link-status)', 'hotspot_status', 'toolbar=0,location=0,directories=0,status=0,menubars=0,resizable=1,width=290,height=200');
 	$(endif)
 	location.href = '$(link-redirect)';
