--- a/alogin.html
+++ b/alogin.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>mikrotik hotspot > redirect</title>
+<title>hotspot > redirect</title>
 <meta http-equiv="refresh" content="2; url=$(link-redirect)">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <meta http-equiv="pragma" content="no-cache">
