--- a/logout.html
+++ b/logout.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>mikrotik hotspot > logout</title>
+<title>Mikrotik HotSpot > logout</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <meta http-equiv="pragma" content="no-cache">
 <meta http-equiv="expires" content="-1">
