--- a/logout.html
+++ b/logout.html
@@ -29,7 +29,7 @@
             </a>
             <div class="row">
             	<div class="col-md-12 text-center">
-                	<div class="alert alert-info">You have just logout</div>
+                	<div class="alert alert-info">You have just Log-Out</div>
 		        </div>
             </div>
             <table class="table table-striped table-responsive">
