--- a/logout.html
+++ b/logout.html
@@ -35,19 +35,19 @@
             <table class="table table-striped table-responsive">
                 <tbody>
 	                <tr>
-	                	<td>user name</td>
+	                	<td>User Name</td>
 	                	<td>$(username)</td>
 	               	</tr>
 					<tr>
-						<td>IP address</td>
+						<td>IP Address</td>
 						<td>$(ip)</td>
 					</tr>
 					<tr>
-						<td>MAC address</td>
+						<td>MAC Address</td>
 						<td>$(mac)</td>
 					</tr>
 					<tr>
-						<td>session time</td>
+						<td>Session Time</td>
 						<td>$(uptime)</td>
 					</tr>
 					$(if session-time-left)
