--- a/alogin.html
+++ b/alogin.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>hotspot > redirect</title>
+<title>HotSpot > redirect</title>
 <meta http-equiv="refresh" content="2; url=$(link-redirect)">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <meta http-equiv="pragma" content="no-cache">
@@ -31,7 +31,7 @@
             	<div class="col-md-12 text-center">
 		            <p class="mb-0">Successfully Connected.</p>
 	                <p>
-	                    If you are loaded to the main page, click <a href="$(link-redirect)">here</a>.
+	                    If you are not loaded to the main page, click <a href="$(link-redirect)">here</a>.
 	                </p>
 		        </div>
             </div>
