--- a/radvert.html
+++ b/radvert.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>mikrotik hotspot > advertisement</title>
+<title>mikrotik hotspot > Advertisement</title>
 <meta http-equiv="refresh" content="2; url=$(link-orig)">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <meta http-equiv="pragma" content="no-cache">
