--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
-<title>Internet HotSpot > login</title>
+<title>Wifi HotSpot > login</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="expires" content="-1" />
@@ -15,7 +15,7 @@
 <body style="background-image:url(img/bg.jpg);">
 <section class="login-wrap">
 	$(if chap-id)
-		<form name="sendin" action="$(link-login-only)" method="post">
+		<form name="sending" action="$(link-login-only)" method="post">
 			<input type="hidden" name="username" />
 			<input type="hidden" name="password" />
 			<input type="hidden" name="dst" value="$(link-orig)" />
