--- a/status.html
+++ b/status.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>mikrotik hotspot > status</title>
+<title>WiFi HotSpot > status</title>
 $(if refresh-timeout)
 <meta http-equiv="refresh" content="$(refresh-timeout-secs)">
 $(endif)
